--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -45,5 +46,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
 
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
+    implementation 'com.squareup.picasso:picasso:2.8'
 }
