--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,20 +6,30 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/tvicon"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/tvicon"
         android:supportsRtl="true"
         android:theme="@style/Theme.TvDownload"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity2"
+            android:parentActivityName=".MainActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -27,6 +37,7 @@
         </activity>
         <activity
             android:name=".DonateActivity"
+            android:theme="@style/Theme.TvDownload1"
             android:exported="false"
             android:label="Donate">
             <meta-data
@@ -35,6 +46,7 @@
         </activity>
         <activity
             android:name=".ContactUsActivity"
+            android:theme="@style/Theme.TvDownload1"
             android:exported="false"
             android:label="Contact Us">
             <meta-data
@@ -43,6 +55,7 @@
         </activity>
         <activity
             android:name=".HelpActivity"
+            android:theme="@style/Theme.TvDownload1"
             android:exported="false"
             android:label="Help">
             <meta-data
@@ -51,6 +64,7 @@
         </activity>
         <activity
             android:name=".PrivacyActivity"
+            android:theme="@style/Theme.TvDownload1"
             android:exported="false"
             android:label="Privacy">
             <meta-data
@@ -66,7 +80,8 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
+            android:theme="@style/Theme.TvDownload1"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
