--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'junit:junit:4.12'
 
 //    implementation 'org.apache.httpcomponents:httpcore:4.4.1'
 //    implementation 'org.apache.httpcomponents:httpclient:4.5'
